# opengl-demo

./: CMakeLists.txt  README.md
inc/: init.h  util.h
inc/glad/: glad.h
include/: 3dmath.h  init.h  math.h  ogl.h
src/: 3dmath.cpp  CMakeLists.txt  Main.cpp  glad.c  init.cpp  math.cpp  ogl.cpp  util.cpp
