#set(HEADER_FILES ../inc/AddOper.h ../inc/Tensor.h)
set(SOURCE_FILES Main.cpp)

add_executable(Demo ${SOURCE_FILES})
target_include_directories(Demo PUBLIC ${PROJECT_BINARY_DIR}/glfw-src/include/)
if(WIN32)
  #target_link_libraries(Demo PUBLIC ${PROJECT_BINARY_DIR}/glfw-build/src/Debug/glfw3.lib)
  target_link_libraries(Demo PUBLIC glfw)
  target_link_libraries(Demo PUBLIC opengl32)
else()
  message(FATAL_ERROR "Unsupported target")
endif()
set_target_properties(Demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/)